cabal-version:      2.4
name:               hpass
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Rakesh
maintainer:         12475069+rakeshkky@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-all
       ghc-options: -O0
       default-extensions:
         StrictData
         BangPatterns
         OverloadedStrings
         LambdaCase
         ImportQualifiedPost
         RecordWildCards
         FlexibleContexts
         QuasiQuotes
         ScopedTypeVariables

library
    import: common-all
    exposed-modules:  HPass

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , text
                    , optparse-applicative
                    , aeson
                    , wreq
                    , http-types
                    , lens
                    , mtl
                    , raw-strings-qq
                    , unordered-containers
                    , bytestring
                    , lens-aeson

                    -- generate password
                    , elocrypt
                    , random

                    -- file handling
                    , directory

    hs-source-dirs:   src
    default-language: Haskell2010

executable hpass
    import: common-all
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        hpass

    hs-source-dirs:   app
    default-language: Haskell2010
